# skillsync-ai

./: .gitignore  DEMO_SCRIPT.txt  Dockerfile  GEMINI.md  Makefile  README.md  SUBMISSION_WRITEUP.md  agents-cli-manifest.yaml  pyproject.toml
app/: agent.py  eval_set_1.evalset.json  fast_api_app.py  mcp_server.py
app/app_utils/: a2a.py  services.py  telemetry.py  typing.py
deployment/terraform/single-project/: variables.tf
tests/integration/: test_agent.py  test_server_e2e.py
