[project]
name = "skillsync-ai"
version = "0.1.0"
description = "SkillSync AI — A multi-agent career intelligence platform powered by Google ADK"
authors = [
    {name = "SkillSync AI", email = "your@email.com"},
]

dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.156.0",
    "protobuf>=6.31.1,<7.0.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "mcp>=1.0.0,<2.0.0",
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.codespell]
ignore-words-list = "rouge"
skip = ".venv,uv.lock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
